--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "imiphp/imi-smarty",
     "type": "library",
-    "license": "MIT",
+    "license": "MulanPSL-2.0",
     "description": "支持在 imi 框架中使用 Smarty 模版引擎",
     "require": {
         "smarty/smarty": "~3.1"
