修复 phpunit 测试，锁定版本号

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "smarty/smarty": "~3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=8"
+        "phpunit/phpunit": "~9.6"
     },
     "autoload": {
         "psr-4": {
