--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
     "require": {
         "smarty/smarty": "~3.1"
     },
-    "require-dev": {
-        "phpunit/phpunit": "~9.6"
-    },
+    "require-dev": {},
     "autoload": {
         "psr-4": {
             "Imi\\Smarty\\": "src/"
